@@ -51,21 +51,23 @@
     <File name="MonoDevelop.AssemblyBrowser.Dom/DomCecilParameter.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.AssemblyBrowser/IAssemblyBrowserNodeBuilder.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.AssemblyBrowser.Dom/DomCecilAttribute.cs" subtype="Code" buildaction="Compile" />
+    <File name="gtk-gui/generated.cs" subtype="Code" buildaction="Compile" />
+    <File name="gtk-gui/MonoDevelop.AssemblyBrowser.AssemblyBrowserWidget.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="gdk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="atk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
-    <ProjectReference type="Assembly" localcopy="True" refto="-r:System" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../build/bin/MonoDevelop.Ide.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="-r:Mono.Posix" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../build/bin/MonoDevelop.Projects.Gui.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../build/bin/MonoDevelop.Core.Gui.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../build/bin/MonoDevelop.Projects.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../build/bin/MonoDevelop.Components.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../build/bin/MonoDevelop.Core.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="../build/bin/Mono.Cecil.dll" />
+    <ProjectReference type="Gac" localcopy="True" refto="Mono.Posix, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
+    <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Core" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Ide" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Components" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Projects.Gui" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Core.Gui" />
+    <ProjectReference type="Project" localcopy="True" refto="Mono.Cecil" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Projects" />
   </References>
   <GtkDesignInfo isWidgetLibrary="True" gtkVersion="2.10.2">
     <ExportedWidgets>
