@@ -1,5 +1,16 @@
 2008-02-07  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.AssemblyBrowser.Dom/DomCecilParameter.cs,
+	  MonoDevelop.AssemblyBrowser.Dom/DomCecilEvent.cs,
+	  MonoDevelop.AssemblyBrowser.Dom/DomCecilField.cs,
+	  MonoDevelop.AssemblyBrowser.Dom/DomCecilAttribute.cs,
+	  MonoDevelop.AssemblyBrowser.Dom/DomCecilProperty.cs,
+	  MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs,
+	  MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs: Fixed some compile
+	  warnings.
+
+2008-02-07  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.AssemblyBrowser.mdp, Makefile.am: Added assembly browser to
 	  the build.
 
